test/errors/circular-dependencies-three/packages/library-tracking/index.ts
export * from '@library-cirulcar-dependencies-three/tracking/src/library.module';
export * from '@library-cirulcar-dependencies-three/tracking/src/tracking/tracking.service';
